Fix identation and spacing on html and css docs.

--- a/css/styles.css
+++ b/css/styles.css
@@ -87,4 +87,6 @@
 
 }
 
-font-family: 'Cabin', sans-serif;
+.style {
+  font-family: 'Cabin', sans-serif;
+}
